Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-49323

[BP to 6.6.4] Reconfigure of interfaces does not work for multiple entries sharing hostname and port and using optional flag

    XMLWordPrintable

Details

    • 1

    Description

      Going from

      [
       {
          "port": 12000,
          "host": "*",
          "ipv4": "required",
          "ipv6": "optional"
       }
      ]
      

      to

      [
       {
          "port": 12000,
          "host": "*",
          "ipv4": "off",
          "ipv6": "optional"
       },
       {
          "port": 12000,
          "host": "*",
          "ipv4": "required",
          "ipv6": "off"
       }
      ]
      

      During reconfigure the IPv4 address would be removed and we'll only get the IPv6 entry (if we flip the order of the entries the IPv6 address gets removed).

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Abhijeeth.Nuthan Abhijeeth Nuthan
              Abhijeeth.Nuthan Abhijeeth Nuthan
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  PagerDuty